Side bar created

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,9 @@
 .sidebarContainer{
     min-height: 100%;
     padding: 1rem;
-    box-shadow: 2px 0 2px grey;
+    // box-shadow: 2px 0 2px grey;
+    // border-right: thin solid black;
     width: 450px;
+    background-color: rgb(245, 244, 244);
 
 }
