--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="homeContainer">
     <app-header [heading]="heading"></app-header>
-    <!-- <div class="homePageContent">
+    <div class="homePageContent">
     <app-sidebar></app-sidebar>
-    <h1>Hello</h1>
-    </div> -->
+    <h3>Any random thing</h3>
+    </div>
     
 </div>
